[package]
name = "arena_brachyura"
version = "0.0.1"
edition = "2021"

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["small_rng", "std", "std_rng"]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]

[dependencies.nalgebra]
version = "0.32.5"

[profile.release]
codegen-units = 1
# debug = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1